--- a/css/parks.css
+++ b/css/parks.css
@@ -2,7 +2,7 @@
 
 /* General Page Styling */
 body {
-    background-color: #748fca;
+    background-color: #00287E;
     color: #090909;
     font-family: 'Arial', sans-serif;
     margin: 0;
