--- a/css/index.css
+++ b/css/index.css
@@ -38,3 +38,16 @@ h1 {
 #mi_parks p {
     margin-bottom: 15px;
 }
+
+/* Desktop View */
+@media (min-width: 1024px) {
+    /* Map */
+    #map {
+        height: 700px;
+        width: 90%;
+        margin: 5px auto;
+        border: 3px solid #00287E;
+        border-radius: 8px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.443);
+    }
+}
